--- a/ITI.ItSchool/Templates/home.html
+++ b/ITI.ItSchool/Templates/home.html
@@ -1,6 +1,10 @@
-﻿<center>
-    <h2>{{Message}}</h2>
-    <md-button class="md-raised md-primary" href="#!/kid/">Élève</md-button>
-    <br />ou<br />
-    <md-button class="md-raised md-primary" href="#!/teacher/">Professeur</md-button>
-</center>
+﻿<div ng-controller="HomeController">
+    <center>
+        <h2>{{Message}}</h2>
+        <md-button class="md-raised md-primary" href="#!/kid/">Élève</md-button>
+        <br />ou<br />
+        <md-button class="md-raised md-primary" href="#!/teacher/">Professeur</md-button>
+        <br />ou<br />
+        <md-button class="md-raised md-primary" href="#!/test_microphone/">Testez le micro</md-button>
+    </center>
+</div>
