--- a/ITI.ItSchool/Views/Shared/_Layout.cshtml
+++ b/ITI.ItSchool/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/Content/Draggable.css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
-    <script src="~/Scripts/jquery-2.1.3.min.js"></script>
+    <script src="~/Scripts/jquery-2.1.3.js"></script>
 
     <!-- Bootstrap -->
     <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" media="screen">
@@ -37,7 +37,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - by It'School Development Team</p>
         </footer>
     </div>
 
@@ -47,7 +47,6 @@
     <script src="../Components/angular-animate/angular-animate.js"></script>
     <script src="../Components/angular-aria/angular-aria.js"></script>
     <script type="text/javascript" src="../Components/angular-material/angular-material.js"></script>
-    <script src="~/Scripts/jquery-2.1.3.js"></script>
     @RenderSection( "Scripts", required: false )
 </body>
 </html>
