--- a/ITI.ItSchool/Templates/TeacherLobbyPage.html
+++ b/ITI.ItSchool/Templates/TeacherLobbyPage.html
@@ -1,6 +1,6 @@
 ﻿<div ng-controller="TeacherLobbyController">
     <section class="row">
-        <h2>{{Message}}</h2>
+        <h2 id="title">{{Message}}</h2>
         <ul class="nav nav-pills  nav-justified">
             <li> <a href="#">Accueil </a></li>
             <li> <a href="#">Classes </a></li>
