--- a/ITI.ItSchool/Views/Shared/_Layout.cshtml
+++ b/ITI.ItSchool/Views/Shared/_Layout.cshtml
@@ -8,47 +8,36 @@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
     <script src="~/Scripts/jquery-2.1.3.min.js"></script>
-    <script src="~/Scripts/jquery-ui.js"></script>
-    <script src="~/Scripts/jquery.js"></script>
 
     <!-- Bootstrap -->
     <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" media="screen">
     <!-- Font-Awesome -->
     <link href="~/Content/bootstrap.min.css" rel="stylesheet">
     <!-- My style -->
-    <link href="~/Content/style.css" rel="stylesheet" media="screen">
+    <link href="~/Content/style.css" rel="stylesheet" media="screen" type="text/css">
 </head>
 <body ng-app="TheApp">
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink( "Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" } )
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav"></ul>
-            </div>
-        </div>
-    </div>
+    
     <div class="container body-content">
-        @RenderBody()
-        <hr />
+        <div id="background">
+            @RenderBody()
+            
+        </div>
+
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - It'School Application</p>
         </footer>
     </div>
-
-    <script src="~/Scripts/angular.min.js"></script>
-    <script src="~/Scripts/angular-route.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
-    <script src="../Components/angular-animate/angular-animate.js"></script>
-    <script src="../Components/angular-aria/angular-aria.js"></script>
-    <script type="text/javascript" src="../Components/angular-material/angular-material.js"></script>
-    <script src="~/Scripts/jquery-2.1.3.js"></script>
-    @RenderSection( "Scripts", required: false )
+        <script src="~/Scripts/jquery-ui.js"></script>
+        <script src="~/Scripts/jquery.js"></script>
+        <script src="~/Scripts/DragNDrop.js"></script>
+        <script src="~/Scripts/angular.min.js"></script>
+        <script src="~/Scripts/angular-route.min.js"></script>
+        <script src="~/Scripts/bootstrap.min.js"></script>
+        <script src="../Components/angular-animate/angular-animate.js"></script>
+        <script src="../Components/angular-aria/angular-aria.js"></script>
+        <script type="text/javascript" src="../Components/angular-material/angular-material.js"></script>
+        <script src="~/Scripts/jquery-2.1.3.js"></script>
+        @RenderSection("Scripts", required: false)
 </body>
 </html>
