--- a/ITI.ItSchool/Content/style.css
+++ b/ITI.ItSchool/Content/style.css
@@ -1,14 +1,15 @@
 html{
-    background-color: #FFF;
+    background-color: #F2D893;
 }
 
 body{
-    background-color: #FFF;
+    background-color: #F2D893;
  	background-image:  url("../Images/Background.png");
     background-repeat:no-repeat;
     background-attachment: scroll;
     background-size: cover;
     background-position: 55% 17%;
+    height: 150%;
 }
 
 #title{
@@ -72,6 +73,15 @@ p {
 }
 
 
+md-input-container:not(.md-input-has-value) input:not(:focus) {
+    color: #000;
+    opacity: 0.87;
+}
+
+md-input-container.md-default-theme.md-input-invalid .md-input {
+    border-color: #3F51B5;
+}
+
 /*Drag and drop begin*/
 body {
   font-family: "Georgia", serif;
@@ -83,7 +93,6 @@ body {
  
 h1, h2, h3, h4 {
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-  margin-left: 7%;
   width: 75%;
 }
  
