--- a/ITI.ItSchool/Templates/KidLobbyPage.html
+++ b/ITI.ItSchool/Templates/KidLobbyPage.html
@@ -1,9 +1,11 @@
 ﻿<div ng-controller="KidLobbyController">
     <section class="row">
-        <h2>{{Message}}</h2>
+        <div id="title">
+            <h2>{{Message}}</h2>
+        </div>
         <ul class="nav nav-pills  nav-justified">
             <li> <a href="#">Accueil </a></li>
-            <li> <a href="#">Classes </a></li>
+            <li> <a href="#">Avatar </a></li>
             <li> <a href="#">Messages </a></li>
             <li> <a href="#!/home">Deconnexion </a></li>
         </ul>
