--- a/ITI.ItSchool/Views/Shared/_Layout.cshtml
+++ b/ITI.ItSchool/Views/Shared/_Layout.cshtml
@@ -7,8 +7,16 @@
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="~/Content/Draggable.css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/ng-grid.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
     <script src="~/Scripts/jquery-2.1.3.min.js"></script>
+    <script src="~/Scripts/angular.min.js"></script>
+    <script src="~/Scripts/angular-route.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="../Components/angular-animate/angular-animate.js"></script>
+    <script src="../Components/angular-aria/angular-aria.js"></script>
+    <script type="text/javascript" src="../Components/angular-material/angular-material.js"></script>
+    <script src="~/Scripts/ng-grid.js"></script>
 
     <!-- Bootstrap -->
     <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" media="screen">
@@ -26,7 +34,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink( "Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" } )
+                @Html.ActionLink( "It'School", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" } )
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav"></ul>
@@ -37,17 +45,9 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - It'School</p>
         </footer>
     </div>
-
-    <script src="~/Scripts/angular.min.js"></script>
-    <script src="~/Scripts/angular-route.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
-    <script src="../Components/angular-animate/angular-animate.js"></script>
-    <script src="../Components/angular-aria/angular-aria.js"></script>
-    <script type="text/javascript" src="../Components/angular-material/angular-material.js"></script>
-    <script src="~/Scripts/jquery-2.1.3.js"></script>
     @RenderSection( "Scripts", required: false )
 </body>
 </html>
