Adding saving ExerciseDictation with users (BAD !! it saves new objects in database)

--- a/ITI.ItSchool/Templates/TeacherCustomizeDictationPage.html
+++ b/ITI.ItSchool/Templates/TeacherCustomizeDictationPage.html
@@ -1,4 +1,11 @@
 ﻿<div ng-controller="TeacherDictationController">
+
+    <script>
+        function disableMicrophone() {
+            location.reload();
+        }
+    </script>
+
     <center>
         <div ng-show="!EasySelected && !MediumSelected && !HardSelected">
             <h1>{{Message}}</h1>
@@ -25,8 +32,14 @@
         <div ng-show="EasySelected">
             <h1>{{Message}}</h1>
             <form name="DictText" ng-submit="SaveText()">
-                <md-button class="md-raised md-primary" ng-click="startRecording(this);" id="StartButton" disabled>record</md-button>
-                <md-button class="md-raised md-primary" ng-click="stopRecording(this);" id="StopButton" disabled>stop</md-button>
+                <div ng-repeat="child in Children">
+                    <md-checkbox ng-checked="exists(child, selected)" ng-click="toggle(child, selected)">
+                        {{ "Élève : " + child.FirstName + " " + child.LastName + " (Pseudo : " + child.Nickname + ")"}}
+                    </md-checkbox>
+                </div>
+
+                <md-button class="md-raised md-primary" ng-click="startRecording(this);" id="StartButton" disabled>Enregistrer</md-button>
+                <md-button class="md-raised md-primary" ng-click="stopRecording(this);" id="StopButton" disabled>Arrêter</md-button>
                 <md-button class="md-raised md-primary" ng-click="enableMicrophone()" id="EnableMicrophone">Activer le micro</md-button>
                 <md-button class="md-raised md-primary" onclick="disableMicrophone()" id="DisableMicrophone" disabled>Désactiver le micro</md-button>
                 <audio id="myAudio"></audio>
@@ -35,18 +48,14 @@
 
                 <h2>Log</h2>
                 <pre id="log"></pre>
-                <script>
-                    function disableMicrophone() {
-                        location.reload();
-                    }
-                </script>
+                
                 <textarea ng-model="ExerciseDictation.Text" name="text" placeholder="Texte de la dictée..." rows="5" cols="40"></textarea><br />
                 <md-button class="md-raised md-primary" type="submit" name="SaveEasyText">{{Button}}</md-button>
                 <h2>{{ExerciseDictation.Text}} + {{ExerciseDictation.Level.Name}}</h2>
             </form>
         </div>
         <div ng-show="MediumSelected">
-            <h1>{{Message}</h1>
+            <h1>{{Message}}</h1>
         </div>
         <div ng-show="HardSelected">
             <h1>{{Message}}</h1>
