--- a/ITI.ItSchool/Templates/TeacherRegistrationPage.html
+++ b/ITI.ItSchool/Templates/TeacherRegistrationPage.html
@@ -31,7 +31,7 @@
                     <span class="error" ng-show="(RegisterForm.uPassword.$dirty || submitted) && RegisterForm.uPassword.$error.required">Le mot de passe doit être entré !</span>
                 </md-input-container>
                 <md-select ng-model="User.Class.Name" placeholder="Classe" required>
-                    <md-option ng-repeat="class in Classes" value="{{class.Name}}" ng-model="User.Grade.Name">{{class.Name}}</md-option>
+                    <md-option ng-repeat="class in Classes" value="{{class.Name}}" ng-model="User.Class.Name">{{class.Name}}</md-option>
                 </md-select>
                 <br />
                 <md-button class="md-raised md-primary" value="{{submitText}}" type="submit">{{submitText}}</md-button>
