--- a/ITI.ItSchool/Templates/home.html
+++ b/ITI.ItSchool/Templates/home.html
@@ -1,6 +1,6 @@
 ﻿<center>
-    <h2>{{Message}}</h2>
-    <md-button class="md-raised md-primary" href="#!/kid/">Élève</md-button>
+    <h2 id="button">{{Message}}</h2>
+    <md-button id="button" class="md-raised md-primary" href="#!/kid/">Élève</md-button>
     <br />
-    <md-button class="md-raised md-primary" href="#!/teacher/">Professeur</md-button>
+    <md-button id="button" class="md-raised md-primary" href="#!/teacher/">Professeur</md-button>
 </center>
