--- a/ITI.ItSchool/Content/style.css
+++ b/ITI.ItSchool/Content/style.css
@@ -2,15 +2,54 @@ html{
     background-color: #F2D893;
 }
 
-body{
+body {
     background-color: #F2D893;
- 	background-image:  url("../Images/Background.png");
-    background-repeat:no-repeat;
+    background-image: url("../Images/Background.png");
+    background-repeat: no-repeat;
     background-attachment: scroll;
     background-size: cover;
     background-position: 55% 17%;
     height: 150%;
+    animation: animationBackground linear 1.5s;
+    animation-iteration-count: 1;
+    transform-origin: 50% 50%;
+    -webkit-animation: animationBackground linear 1.5s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-transform-origin: 50% 50%;
+    -moz-animation: animationBackground linear 1.5s;
+    -moz-animation-iteration-count: 1;
+    -moz-transform-origin: 50% 50%;
+    -o-animation: animationBackground linear 1.5s;
+    -o-animation-iteration-count: 1;
+    -o-transform-origin: 50% 50%;
+    -ms-animation: animationBackground linear 1.5s;
+    -ms-animation-iteration-count: 1;
+    -ms-transform-origin: 50% 50%;
 }
+
+@keyframes animationBackground{
+  0% {
+    opacity:0;
+ 	   transform:  scaleX(0.30) scaleY(0.30) ;
+  }
+  25% {
+    opacity:0;
+	transform:  scaleX(1.10) scaleY(1.10) ;
+
+  }
+  55% {
+    opacity:0;
+	    transform:  scaleX(0.95) scaleY(0.95) ;
+
+  }
+  100% {
+    opacity:1;
+    transform:  scaleX(1.00) scaleY(1.00) ;
+	 
+
+  }
+}
+    
 
 #title{
     margin-left: 10%;
@@ -81,6 +120,106 @@ md-input-container:not(.md-input-has-value) input:not(:focus) {
 md-input-container.md-default-theme.md-input-invalid .md-input {
     border-color: #3F51B5;
 }
+
+#button:active{
+  animation: animationFrames ease 1s;
+  animation-iteration-count: 1;
+  transform-origin: 50% 50%;
+  animation-fill-mode:forwards; /*when the spec is finished*/
+  -webkit-animation: animationFrames ease 1s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-transform-origin: 50% 50%;
+  -webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/ 
+  -moz-animation: animationFrames ease 1s;
+  -moz-animation-iteration-count: 1;
+  -moz-transform-origin: 50% 50%;
+  -moz-animation-fill-mode:forwards; /*FF 5+*/
+  -o-animation: animationFrames ease 1s;
+  -o-animation-iteration-count: 1;
+  -o-transform-origin: 50% 50%;
+  -o-animation-fill-mode:forwards; /*Not implemented yet*/
+  -ms-animation: animationFrames ease 1s;
+  -ms-animation-iteration-count: 1;
+  -ms-transform-origin: 50% 50%;
+  -ms-animation-fill-mode:forwards; /*IE 10+*/
+}
+
+@keyframes animationFrames{
+  0% {
+    opacity:1;
+    transform:  translate(0px,0px)  ;
+  }
+  20% {
+    opacity:1;
+    transform:  translate(20px,0px)  ;
+  }
+  100% {
+    opacity:0;
+    transform:  translate(-1000px,0px)  ;
+  }
+}
+
+@-moz-keyframes animationFrames{
+  0% {
+    opacity:1;
+    -moz-transform:  translate(0px,0px)  ;
+  }
+  20% {
+    opacity:1;
+    -moz-transform:  translate(20px,0px)  ;
+  }
+  100% {
+    opacity:0;
+    -moz-transform:  translate(-1000px,0px)  ;
+  }
+}
+
+@-webkit-keyframes animationFrames {
+  0% {
+    opacity:1;
+    -webkit-transform:  translate(0px,0px)  ;
+  }
+  20% {
+    opacity:1;
+    -webkit-transform:  translate(20px,0px)  ;
+  }
+  100% {
+    opacity:0;
+    -webkit-transform:  translate(-1000px,0px)  ;
+  }
+}
+
+@-o-keyframes animationFrames {
+  0% {
+    opacity:1;
+    -o-transform:  translate(0px,0px)  ;
+  }
+  20% {
+    opacity:1;
+    -o-transform:  translate(20px,0px)  ;
+  }
+  100% {
+    opacity:0;
+    -o-transform:  translate(-1000px,0px)  ;
+  }
+}
+
+@-ms-keyframes animationFrames {
+  0% {
+    opacity:1;
+    -ms-transform:  translate(0px,0px)  ;
+  }
+  20% {
+    opacity:1;
+    -ms-transform:  translate(20px,0px)  ;
+  }
+  100% {
+    opacity:0;
+    -ms-transform:  translate(-1000px,0px)  ;
+  }
+}
+
+
 
 /*Drag and drop begin*/
 body {
