--- a/ITI.ItSchool/Views/BackOffice/index.cshtml
+++ b/ITI.ItSchool/Views/BackOffice/index.cshtml
@@ -25,7 +25,7 @@
     <script>console.log( "L25" );</script>
     <div id="background">
         <section class="row">
-            <img src="~/Images/LOGO_360.png" class="img-responsive" />
+            <img src="~/Images/LOGO_360.png" class="img-responsive" id="background"/>
         </section>
         <section class="row">
 
