--- a/ITI.ItSchool/Templates/TeacherHomePage.html
+++ b/ITI.ItSchool/Templates/TeacherHomePage.html
@@ -1,6 +1,6 @@
 ﻿<center>
-    <h2>{{Message}}</h2>
-    <md-button class="md-raised md-primary" href="#!/teacher/login">Connexion</md-button>
+    <h2 id="buttonTeacher">{{Message}}</h2>
+    <md-button id="buttonTeacher" class="md-raised md-primary" href="#!/teacher/login">Connexion</md-button>
     <br />
-    <md-button class="md-raised md-primary" href="#!/teacher/registration">Inscription</md-button>
+    <md-button id="buttonTeacher" class="md-raised md-primary" href="#!/teacher/registration">Inscription</md-button>
 </center>
