--- a/ITI.ItSchool/Content/style.css
+++ b/ITI.ItSchool/Content/style.css
@@ -121,7 +121,7 @@ md-input-container.md-default-theme.md-input-invalid .md-input {
     border-color: #3F51B5;
 }
 
-#button:active{
+#buttonStudent{
   animation: animationFrames ease 1s;
   animation-iteration-count: 1;
   transform-origin: 50% 50%;
@@ -146,79 +146,206 @@ md-input-container.md-default-theme.md-input-invalid .md-input {
 
 @keyframes animationFrames{
   0% {
-    opacity:1;
-    transform:  translate(0px,0px)  ;
+    opacity:0;
+    transform:  translate(-1500px,0px)  ;
   }
-  20% {
+  60% {
     opacity:1;
-    transform:  translate(20px,0px)  ;
+    transform:  translate(30px,0px)  ;
+  }
+  80% {
+    transform:  translate(-10px,0px)  ;
   }
   100% {
-    opacity:0;
-    transform:  translate(-1000px,0px)  ;
+    opacity:1;
+    transform:  translate(0px,0px)  ;
   }
 }
 
 @-moz-keyframes animationFrames{
   0% {
-    opacity:1;
-    -moz-transform:  translate(0px,0px)  ;
+    opacity:0;
+    -moz-transform:  translate(-1500px,0px)  ;
   }
-  20% {
+  60% {
     opacity:1;
-    -moz-transform:  translate(20px,0px)  ;
+    -moz-transform:  translate(30px,0px)  ;
+  }
+  80% {
+    -moz-transform:  translate(-10px,0px)  ;
   }
   100% {
-    opacity:0;
-    -moz-transform:  translate(-1000px,0px)  ;
+    opacity:1;
+    -moz-transform:  translate(0px,0px)  ;
   }
 }
 
 @-webkit-keyframes animationFrames {
   0% {
-    opacity:1;
-    -webkit-transform:  translate(0px,0px)  ;
+    opacity:0;
+    -webkit-transform:  translate(-1500px,0px)  ;
   }
-  20% {
+  60% {
     opacity:1;
-    -webkit-transform:  translate(20px,0px)  ;
+    -webkit-transform:  translate(30px,0px)  ;
+  }
+  80% {
+    -webkit-transform:  translate(-10px,0px)  ;
   }
   100% {
-    opacity:0;
-    -webkit-transform:  translate(-1000px,0px)  ;
+    opacity:1;
+    -webkit-transform:  translate(0px,0px)  ;
   }
 }
 
 @-o-keyframes animationFrames {
   0% {
-    opacity:1;
-    -o-transform:  translate(0px,0px)  ;
+    opacity:0;
+    -o-transform:  translate(-1500px,0px)  ;
   }
-  20% {
+  60% {
     opacity:1;
-    -o-transform:  translate(20px,0px)  ;
+    -o-transform:  translate(30px,0px)  ;
+  }
+  80% {
+    -o-transform:  translate(-10px,0px)  ;
   }
   100% {
-    opacity:0;
-    -o-transform:  translate(-1000px,0px)  ;
+    opacity:1;
+    -o-transform:  translate(0px,0px)  ;
   }
 }
 
 @-ms-keyframes animationFrames {
   0% {
+    opacity:0;
+    -ms-transform:  translate(-1500px,0px)  ;
+  }
+  60% {
+    opacity:1;
+    -ms-transform:  translate(30px,0px)  ;
+  }
+  80% {
+    -ms-transform:  translate(-10px,0px)  ;
+  }
+  100% {
     opacity:1;
     -ms-transform:  translate(0px,0px)  ;
   }
-  20% {
+}
+
+#buttonTeacher{
+  animation: animationFrames ease 1s;
+  animation-iteration-count: 1;
+  transform-origin: 50% 50%;
+  animation-fill-mode:forwards; /*when the spec is finished*/
+  -webkit-animation: animationFrames ease 1s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-transform-origin: 50% 50%;
+  -webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/ 
+  -moz-animation: animationFrames ease 1s;
+  -moz-animation-iteration-count: 1;
+  -moz-transform-origin: 50% 50%;
+  -moz-animation-fill-mode:forwards; /*FF 5+*/
+  -o-animation: animationFrames ease 1s;
+  -o-animation-iteration-count: 1;
+  -o-transform-origin: 50% 50%;
+  -o-animation-fill-mode:forwards; /*Not implemented yet*/
+  -ms-animation: animationFrames ease 1s;
+  -ms-animation-iteration-count: 1;
+  -ms-transform-origin: 50% 50%;
+  -ms-animation-fill-mode:forwards; /*IE 10+*/
+}
+
+@keyframes animationFrames{
+  0% {
+    opacity:0;
+    transform:  translate(-1500px,0px)  ;
+  }
+  60% {
     opacity:1;
-    -ms-transform:  translate(20px,0px)  ;
+    transform:  translate(30px,0px)  ;
+  }
+  80% {
+    transform:  translate(-10px,0px)  ;
   }
   100% {
-    opacity:0;
-    -ms-transform:  translate(-1000px,0px)  ;
+    opacity:1;
+    transform:  translate(0px,0px)  ;
   }
 }
 
+@-moz-keyframes animationFrames{
+  0% {
+    opacity:0;
+    -moz-transform:  translate(-1500px,0px)  ;
+  }
+  60% {
+    opacity:1;
+    -moz-transform:  translate(30px,0px)  ;
+  }
+  80% {
+    -moz-transform:  translate(-10px,0px)  ;
+  }
+  100% {
+    opacity:1;
+    -moz-transform:  translate(0px,0px)  ;
+  }
+}
+
+@-webkit-keyframes animationFrames {
+  0% {
+    opacity:0;
+    -webkit-transform:  translate(-1500px,0px)  ;
+  }
+  60% {
+    opacity:1;
+    -webkit-transform:  translate(30px,0px)  ;
+  }
+  80% {
+    -webkit-transform:  translate(-10px,0px)  ;
+  }
+  100% {
+    opacity:1;
+    -webkit-transform:  translate(0px,0px)  ;
+  }
+}
+
+@-o-keyframes animationFrames {
+  0% {
+    opacity:0;
+    -o-transform:  translate(-1500px,0px)  ;
+  }
+  60% {
+    opacity:1;
+    -o-transform:  translate(30px,0px)  ;
+  }
+  80% {
+    -o-transform:  translate(-10px,0px)  ;
+  }
+  100% {
+    opacity:1;
+    -o-transform:  translate(0px,0px)  ;
+  }
+}
+
+@-ms-keyframes animationFrames {
+  0% {
+    opacity:0;
+    -ms-transform:  translate(-1500px,0px)  ;
+  }
+  60% {
+    opacity:1;
+    -ms-transform:  translate(30px,0px)  ;
+  }
+  80% {
+    -ms-transform:  translate(-10px,0px)  ;
+  }
+  100% {
+    opacity:1;
+    -ms-transform:  translate(0px,0px)  ;
+  }
+}
 
 
 /*Drag and drop begin*/
