--- a/ITI.ItSchool/Templates/KidHomePage.html
+++ b/ITI.ItSchool/Templates/KidHomePage.html
@@ -1,6 +1,6 @@
 ﻿<center>
-    <h2>{{Message}}</h2>
-    <md-button class="md-raised md-primary" href="#!/kid/login">Connecte-toi</md-button>
+    <h2 id="buttonStudent">{{Message}}</h2>
+    <md-button id="buttonStudent" class="md-raised md-primary" href="#!/kid/login">Connecte-toi</md-button>
     <br />
-    <md-button class="md-raised md-primary" href="#!/kid/registration">Inscris-toi</md-button>
+    <md-button id="buttonStudent" class="md-raised md-primary" href="#!/kid/registration">Inscris-toi</md-button>
 </center>
