--- a/ITI.ItSchool/Templates/voiceRecorder.html
+++ b/ITI.ItSchool/Templates/voiceRecorder.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="MicrophoneController">
+﻿<div ng-controller="MicrophoneController" id="Micro">
     <h1>Record to MP3 Test</h1>
 
     <md-button class="md-raised md-primary" ng-click="startRecording(this);" id="StartButton" disabled>record</md-button>
