Saving BattleCard OK !

--- a/ITI.ItSchool/Templates/TeacherCustomizeBattleCardPage.html
+++ b/ITI.ItSchool/Templates/TeacherCustomizeBattleCardPage.html
@@ -99,7 +99,7 @@
         <div ng-show="MediumSelected">
             <h1>{{Message}}</h1>
             <form name="FormChoice" ng-submit="SaveChoice()">
-                <select id="choice" value="choice" ng-model="ExerciseBattleCard.Choice">
+                <select id="choice" value="choice" ng-model="ExerciseBattleCardData.ChoiceData">
                     <option value="alphabet" id="alphabet">Alphabet</option>
                     <option disabled id="choiceTitle">Chiffres et nombres</option>
                     <option value="0-10">0-10</option>
@@ -115,13 +115,13 @@
                 </div>
                  <code style="display: block; padding : 8px;">{{selected | json}}</code> 
                 <md-button id="saveExercise" class="md-raised md-primary" type="submit" name="SaveMediumChoice">{{Button}}</md-button>
-                <h2>{{ExerciseBattleCardData.ChoiceData}} + {{ExerciseBattleCardData.Level.Name}} + {{ExerciseBattleCardData.Users.FirstName}}</h2>
+                <h2>{{ExerciseBattleCardData.ChoiceData}} + {{ExerciseBattleCardData.Level.Name}}</h2>
                 </form>
         </div>
         <div ng-show="HardSelected">
             <h1>{{Message}}</h1>
             <form name="FormChoice" ng-submit="SaveChoice()">
-                <select id="choice" value="choice" ng-model="ExerciseBattleCard.Choice">
+                <select id="choice" value="choice" ng-model="ExerciseBattleCardData.ChoiceData">
                     <option value="alphabet" id="alphabet">Alphabet</option>
                     <option disabled id="choiceTitle">Chiffres et nombres</option>
                     <option value="0-10">0-10</option>
