--- a/ITI.ItSchool/Templates/KidPlayDictationPage.html
+++ b/ITI.ItSchool/Templates/KidPlayDictationPage.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="KidPlayController">
+﻿<div ng-controller="KidPlayDictationController">
     <center>
         <div ng-show="!EasySelected && !MediumSelected && !HardSelected">
             <h1>{{Message}}</h1>
@@ -24,19 +24,33 @@
         </div>
         <div ng-show="EasySelected">
             <h1>{{Message}}</h1>
-            <form name="DictText" ng-submit="SaveText()">
-                <textarea ng-model="Game.Data" name="text" placeholder="Texte de la dictée..." rows="5" cols="40"></textarea><br />
+            <form name="DictText" ng-submit="SaveText">
+                <audio controls="controls" autobuffer="autobuffer" autoplay="autoplay" id="dictationAudio">
+                    <source src="" />
+                </audio><br />
+                <textarea ng-model="ExerciseDictation.Text" name="text" placeholder="Texte de la dictée..." rows="5" cols="40">{{ExerciseDictation.Text}}</textarea><br />
                 <md-button class="md-raised md-primary" type="submit" name="SaveEasyText">{{Button}}</md-button>
-                <h2>{{Game.Data}} + {{Game.Level.Name}}</h2>
             </form>
         </div>
         <div ng-show="MediumSelected">
             <h1>{{Message}}</h1>
+            <form name="DictText" ng-submit="SaveText">
+                <audio controls="controls" autobuffer="autobuffer" autoplay="autoplay" id="dictationAudio2">
+                    <source src="" />
+                </audio><br />
+                <textarea ng-model="ExerciseDictation.Text" name="text" placeholder="Texte de la dictée..." rows="5" cols="40">{{ExerciseDictation.Text}}</textarea><br />
+                <md-button class="md-raised md-primary" type="submit" name="SaveEasyText">{{Button}}</md-button>
+            </form>
         </div>
         <div ng-show="HardSelected">
-            <h1>
-                {{Message}}
-            </h1>
+            <h1>{{Message}}</h1>
+            <form name="DictText" ng-submit="SaveText">
+                <audio controls="controls" autobuffer="autobuffer" autoplay="autoplay" id="dictationAudio3">
+                    <source src="" />
+                </audio><br />
+                <textarea ng-model="ExerciseDictation.Text" name="text" placeholder="Texte de la dictée..." rows="5" cols="40">{{ExerciseDictation.Text}}</textarea><br />
+                <md-button class="md-raised md-primary" type="submit" name="SaveEasyText">{{Button}}</md-button>
+            </form>
         </div>
     </center>
 </div>
