--- a/ITI.ItSchool/Templates/TeacherDescriptionBattleCardPage.html
+++ b/ITI.ItSchool/Templates/TeacherDescriptionBattleCardPage.html
@@ -1,65 +1,4 @@
 ﻿<div ng-controller="TeacherDescriptionBattleCardController">
-    <style>
-        body, html{
-             background-color : #F0E8D8;
-        }
-        h1 {
-	        text-align : center;
-        }
-
-        #global {
-          padding-bottom : 5%;
-          position: relative; /* on positionne le conteneur */
-          margin-left: auto;
-          margin-right: auto;
-          width: 100%;
-          height : 100%;
-          border : 1px solid black;
-          background: #F0E8D8 -moz-linear-gradient(center bottom , #DACDB1 11%, #F0E8D8 56%) repeat scroll 0% 0%;
-
-        }
-
-        #gameDescription {
-	        margin-top: 3%;
-	        text-align : center;
-	        margin-left: auto;
-	        margin-right: auto;
-	        width: 70%;
-	        border : 1px solid black;
-	        box-shadow: 0px 0px 65px #CDBE9F inset, 0px 0px 20px #BEAE8C inset, 0px 0px 5px #816F47;
-	        font-family: Georgia,Times,serif;
-	        line-height: 1.50em;
-	
-        } 
-
-        #alphabet, #chiffre{
-            margin-top : 1.5%;          
-            border : 1px solid black;
-	        box-shadow: 0px 0px 65px #CDBE9F inset, 0px 0px 20px #BEAE8C inset, 0px 0px 5px #816F47;
-	        font-family: Georgia,Times,serif;
-	        line-height: 1.50em;
-        }
-        #alphabet{
-            margin-right: 8%;
-        }
-
-        #leftArrow, #rightArrow{
-            position : absolute;
-            /*border : 1px solid black;*/
-            top : 45%;
-            background-color : #CDBE9F;
-        }
-        #leftArrow{           
-            right: 90%;
-        }
-        #rightArrow{
-            left: 90%;
-        }
-    </style>
-
-    <h1>Battle Card Game</h1>
-
-
     <div id="global">
 
         <md-button id="leftArrow" class="md-fab" aria-label="FAB" href="#!/teacher/exercices">
@@ -70,7 +9,7 @@
         </md-button>
 
             <div id="gameDescription">
-                <h2>Description</h2>
+                <h2 class="ng-binding" id="header">Description</h2>
                 <p>
                     Pandente itaque viam fatorum sorte tristissima, qua praestitutum erat eum vita et imperio spoliari, itineribus interiectis permutatione
                     iumentorum emensis venit Petobionem oppidum Noricorum, ubi reseratae sunt insidiarum latebrae omnes, et Barbatio repente apparuit comes,
