Minor updates in routing and KidSelectExercisesPage

--- a/ITI.ItSchool/Templates/KidSelectExercicesPage.html
+++ b/ITI.ItSchool/Templates/KidSelectExercicesPage.html
@@ -4,7 +4,7 @@
         <table>
             <tr>
                 <td><md-button class="md-raised md-primary" href="#!/kid/exercices/drag_drop">Glissé-Déposé</md-button></td>
-                <td><md-button class="md-raised md-primary" href="#!/kid/exercices/battleCard">Card Game</md-button></td>
+                <td><md-button class="md-raised md-primary" href="#!/kid/exercices/battleCard">Battle Card</md-button></td>
                 <td><md-button class="md-raised md-primary" href="#!/kid/exercices/dictation">Dictée</md-button></td>
                 <td><md-button class="md-raised md-primary" href="#!/kid/exercices/cloze_exercize">Texte à trous</md-button></td>
             </tr>
