--- a/ITI.ItSchool/Templates/KidPlayDictationPage.html
+++ b/ITI.ItSchool/Templates/KidPlayDictationPage.html
@@ -6,17 +6,17 @@
                 <tr>
                     <td>
                         <form novalidate name="EasyForm" ng-submit="Easy()">
-                            <md-button class="md-raised md-primary" type="submit" name="easy">Facile</md-button>
+                            <md-button class="md-raised md-primary" type="submit" name="easy" id="easy">Facile</md-button>
                         </form>
                     </td>
                     <td>
                         <form novalidate name="MediumForm" ng-submit="Medium()">
-                            <md-button class="md-raised md-primary" type="submit" name="medium">Moyen</md-button>
+                            <md-button class="md-raised md-primary" type="submit" name="medium" id="medium">Moyen</md-button>
                         </form>
                     </td>
                     <td>
                         <form novalidate name="HardForm" ng-submit="Hard()">
-                            <md-button class="md-raised md-primary" type="submit" name="hard">Difficile</md-button>
+                            <md-button class="md-raised md-primary" type="submit" name="hard" id="hard">Difficile</md-button>
                         </form>
                     </td>
                 </tr>
