--- a/ITI.ItSchool/Templates/KidSelectExercicesPage.html
+++ b/ITI.ItSchool/Templates/KidSelectExercicesPage.html
@@ -3,10 +3,10 @@
         <h1>{{Message}}</h1>
         <table>
             <tr>
-                <td><md-button class="md-raised md-primary" href="#!/kid/exercices/drag_drop">Glissé-Déposé</md-button></td>
-                <td><md-button class="md-raised md-primary" href="#!/kid/exercices/battleCard">Card Game</md-button></td>
-                <td><md-button class="md-raised md-primary" href="#!/kid/exercices/dictation">Dictée</md-button></td>
-                <td><md-button class="md-raised md-primary" href="#!/kid/exercices/cloze_exercize">Texte à trous</md-button></td>
+                <td><md-button class="md-raised md-primary" href="#!/kid/exercices/drag_drop" id="selectExercices">Glissé-Déposé</md-button></td>
+                <td><md-button class="md-raised md-primary" href="#!/kid/exercices/battleCard" id="selectExercices">Card Game</md-button></td>
+                <td><md-button class="md-raised md-primary" href="#!/kid/exercices/dictation" id="selectExercices">Dictée</md-button></td>
+                <td><md-button class="md-raised md-primary" href="#!/kid/exercices/cloze_exercize" id="selectExercices">Texte à trous</md-button></td>
             </tr>
         </table>
     </center>
