Update : Child's side Dictation
The child can see the dictations that they are affected to.
They can also hear the audio, type the dictation and submit it.

--- a/ITI.ItSchool/Templates/KidHomePage.html
+++ b/ITI.ItSchool/Templates/KidHomePage.html
@@ -1,6 +1,8 @@
-﻿<center>
-    <h2 id="buttonStudent">{{Message}}</h2>
-    <md-button id="buttonStudent" class="md-raised md-primary" href="#!/kid/login">Connecte-toi</md-button>
-    <br />
-    <md-button id="buttonStudent" class="md-raised md-primary" href="#!/kid/registration">Inscris-toi</md-button>
-</center>
+﻿<div ng-controller="KidHomeController">
+    <center>
+        <h2 id="buttonStudent">{{Message}}</h2>
+        <md-button id="buttonStudent" class="md-raised md-primary" href="#!/kid/login">Connecte-toi</md-button>
+        <br />
+        <md-button id="buttonStudent" class="md-raised md-primary" href="#!/kid/registration">Inscris-toi</md-button>
+    </center>
+</div>
