--- a/ITI.ItSchool/Templates/TeacherHomePage.html
+++ b/ITI.ItSchool/Templates/TeacherHomePage.html
@@ -1,6 +1,8 @@
-﻿<center>
-    <h2 id="buttonTeacher">{{Message}}</h2>
-    <md-button id="buttonTeacher" class="md-raised md-primary" href="#!/teacher/login">Connexion</md-button>
-    <br />
-    <md-button id="buttonTeacher" class="md-raised md-primary" href="#!/teacher/registration">Inscription</md-button>
-</center>
+﻿<div ng-controller="TeacherHomeController">
+    <center>
+        <h2 id="buttonTeacher">{{Message}}</h2>
+        <md-button id="buttonTeacher" class="md-raised md-primary" href="#!/teacher/login">Connexion</md-button>
+        <br />
+        <md-button id="buttonTeacher" class="md-raised md-primary" href="#!/teacher/registration">Inscription</md-button>
+    </center>
+</div>
