--- a/ITI.ItSchool/Templates/KidPlayDictationPage.html
+++ b/ITI.ItSchool/Templates/KidPlayDictationPage.html
@@ -24,31 +24,32 @@
         </div>
         <div ng-show="EasySelected">
             <h1>{{Message}}</h1>
-            <form name="DictText" ng-submit="SaveText">
-                <audio controls="controls" autobuffer="autobuffer" autoplay="autoplay" id="dictationAudio">
-                    <source src="" />
-                </audio><br />
-                <textarea ng-model="ExerciseDictation.Text" name="text" placeholder="Texte de la dictée..." rows="5" cols="40">{{ExerciseDictation.Text}}</textarea><br />
+            <audio controls="controls" autobuffer="autobuffer" id="dictationAudio">
+                <source src="" />
+            </audio><br />
+            <form name="DictText" ng-submit="SubmitText()">
+                <textarea ng-model="ChildTextWritted" name="text" placeholder="Texte de la dictée..." rows="5" cols="40"></textarea><br />
                 <md-button class="md-raised md-primary" type="submit" name="SaveEasyText">{{Button}}</md-button>
+                <h2>{{ChildTextWritted}}</h2>
             </form>
         </div>
         <div ng-show="MediumSelected">
             <h1>{{Message}}</h1>
             <form name="DictText" ng-submit="SaveText">
-                <audio controls="controls" autobuffer="autobuffer" autoplay="autoplay" id="dictationAudio2">
+                <audio controls="controls" autobuffer="autobuffer" id="dictationAudio2">
                     <source src="" />
                 </audio><br />
-                <textarea ng-model="ExerciseDictation.Text" name="text" placeholder="Texte de la dictée..." rows="5" cols="40">{{ExerciseDictation.Text}}</textarea><br />
+                <textarea name="text" placeholder="Texte de la dictée..." rows="5" cols="40"></textarea><br />
                 <md-button class="md-raised md-primary" type="submit" name="SaveEasyText">{{Button}}</md-button>
             </form>
         </div>
         <div ng-show="HardSelected">
             <h1>{{Message}}</h1>
             <form name="DictText" ng-submit="SaveText">
-                <audio controls="controls" autobuffer="autobuffer" autoplay="autoplay" id="dictationAudio3">
+                <audio controls="controls" autobuffer="autobuffer" id="dictationAudio3">
                     <source src="" />
                 </audio><br />
-                <textarea ng-model="ExerciseDictation.Text" name="text" placeholder="Texte de la dictée..." rows="5" cols="40">{{ExerciseDictation.Text}}</textarea><br />
+                <textarea name="text" placeholder="Texte de la dictée..." rows="5" cols="40"></textarea><br />
                 <md-button class="md-raised md-primary" type="submit" name="SaveEasyText">{{Button}}</md-button>
             </form>
         </div>
