--- a/ITI.ItSchool/Templates/TeacherSelectExercicesPage.html
+++ b/ITI.ItSchool/Templates/TeacherSelectExercicesPage.html
@@ -3,10 +3,10 @@
         <h1>{{Message}}</h1>
         <table>
             <tr>
-                <td><md-button id="selectExercice" class="md-raised md-primary" href="#!/teacher/exercices/matter">Glissé-Déposé</md-button></td>
-                <td><md-button id="selectExercice"  class="md-raised md-primary" href="#!/teacher/exercices/battleCard">Card Game</md-button></td>
-                <td><md-button id="selectExercice" class="md-raised md-primary" href="#!/teacher/exercices/dictation">Dictée</md-button></td>
-                <td><md-button id="selectExercice" class="md-raised md-primary" href="#!/teacher/exercices/cloze_exercise">Texte à trous</md-button></td>
+                <td><md-button id="selectExercices" class="md-raised md-primary" href="#!/teacher/exercices/matter">Glissé-Déposé</md-button></td>
+                <td><md-button id="selectExercices"  class="md-raised md-primary" href="#!/teacher/exercices/battleCard">Card Game</md-button></td>
+                <td><md-button id="selectExercices" class="md-raised md-primary" href="#!/teacher/exercices/dictation">Dictée</md-button></td>
+                <td><md-button id="selectExercices" class="md-raised md-primary" href="#!/teacher/exercices/cloze_exercise">Texte à trous</md-button></td>
             </tr>
         </table>
     </center>
