--- a/ITI.ItSchool/Views/Shared/_Layout.cshtml
+++ b/ITI.ItSchool/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     <script src="../Components/angular-animate/angular-animate.js"></script>
     <script src="../Components/angular-aria/angular-aria.js"></script>
     <script type="text/javascript" src="../Components/angular-material/angular-material.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.5/ngStorage.min.js"></script>
     <script src="~/Scripts/ng-grid.js"></script>
 
     <!-- BattleCardGame -->
